bad/for_void_over_class.example_compiler_output
ERROR
[1mbad/for_void_over_class.lat:6:7: [1;31merror: [0;1mfor iterator `x` cannot have type `void`[m
	for (void x : new Y) {}
	     [1;32m^[m
